<resources>
    <string name="app_name">UnitedFit: Reach you goals.</string>
    <string name="applicant_name">Android Codility</string>
    <string name="title_home">Accueil</string>
    <string name="title_classement">Classement</string>
    <string name="title_profile">Profil</string>
    <string name="title_challenge">Challenges</string>
    <string name="text_fragment_home_temporary">Vous êtes sur l\'accueil</string>
    <string name="text_fragment_challenges_temporary">Vous êtes sur les challenges</string>
    <string name="text_fragment_profile_temporary">Vous êtes sur votre profil</string>
    <string name="text_fragment_settings_temporary">Vous êtes dans les paramètres</string>

    <string name="next">Suivant</string>
    <string name="skip">Passer</string>
    <string name="start">Start</string>

    <string name="slide_1_title">Android Lollipop!</string>
    <string name="slide_1_desc">Android 5.0 (LOLLIPOP) offers new features for users and app developers. This document provides an introduction to the most notable new APIs.!</string>

    <string name="slide_2_title">Android Marshmallow</string>
    <string name="slide_2_desc">Now on Tap anticipates what you need in the moment. With a simple tap, you can get cards with useful information and apps that feed your need to know.!</string>

    <string name="slide_3_title">Android Nougat</string>
    <string name="slide_3_desc">Enjoy simple, high quality virtual reality With VR mode, Android Nougat is ready to transport you to new worlds. Available on Daydream-ready phones.!</string>

    <string name="slide_4_title">Android Oreo</string>
    <string name="slide_4_desc">Test your apps for compatibility with Android Oreo. Just download a device system image, install your current app, and test in areas where behavior changes may affect the app. Update your code and publish, using the app\'s current platform targeting.!</string>
    <string name="intro_slider">Android Introduction Slider is basically used to introduce the major features of the application to the user. It also attracts and helps the user to know about the app. It is also called android welcome screen and is used to guide the user on how to use the app just after installation. It is used in almost all popular apps and games these days.
    \n\nTo make the intro slider we will make 3-4 slide screens having swipe gesture facilities with a skip and next navigation buttons. The user can navigate to other welcome screen using swipe gesture or by using the next button. After that, the user can navigate to the home screen or login screen. Intro slider is basically shown once after the installation and after that user directly interact with the home screen. </string>
    <string name="slide1_title">Participe à des challenges</string>
    <string name="slide1_description">Crée tes propres challenges ou participe à des challenges publics. Plusieurs catégories sont disponibles : course, pompes, vélo, natation, etc.</string>
    <string name="slide2_title">Défie tes amis</string>
    <string name="slide2_description">Invite tes amis à participer à des challenges privés et encourage-les à se surpasser. Aidez-vous les uns les autres et créez une dynamique de groupe.</string>
    <string name="slide3_title">Dépasse tes limites</string>
    <string name="slide3_description">Gagne tous les challenges et surpasse toi. Aucun challenge n’est insurmontable, tu es ta propre limite. C’est parti !</string>
    <string name="createChallengeTitle">Créer un challenge</string>
    <string name="category">Categorie</string>
    <string name="status">Status</string>
    <string name="free">Public</string>
    <string name="restricted">Privé</string>
    <string name="challengers">Participants</string>
    <string name="add_challengers">Ajouter des participants</string>
    <string name="add_new_challenge">Créer un challenge</string>
    <string name="description">Description</string>
    <string name="soyez_clair_sur_votre_id_e">Soyez clair sur votre idée :)</string>
    <string name="r_v_le_toi">Révèle toi à</string>
    <string name="chaque_challenge">chaque challenge !</string>
    <string name="pas_encore_inscrit">Pas encore inscrit ? </string>
    <string name="cr_er_un_compte"> Créer un compte</string>
    <string name="se_connecter">Se connecter</string>
    <string name="aucun_compte_ne_correspond">Aucun compte ne correspond</string>
    <string name="nom">Nom</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="donn_es_invalides">Données invalides</string>
    <string name="km">km</string>
    <string name="jours">jours</string>
    <string name="_3_jours_restants">3 jours restants</string>
    <string name="_50_km_de_marche_pieds">50 km de marche à pieds</string>
    <string name="f_licitations">Félicitations</string>
    <string name="tu_as_termin_le_challenge_en_seulement_3_jours">Tu as terminé le challenge en seulement 3 jours !</string>
    <string name="_100_pompes_un_doigt">100 pompes à un doigt</string>
    <string name="bonjour">Bonjour</string>
    <string name="name">Name</string>
    <string name="invitations">Invitations</string>
    <string name="actualit_s">Actualités</string>
    <string name="commencer">Commencer</string>
</resources>
